# server/routes/telegram_router.js
@@ -2,7 +2,7 @@ const express = require('express');
 const passport = require('passport');
 const telegramCtrl = require('../controllers/telegram_controller');
 const { validator } = require('../middlewares/validator');
-const { linkTelegramSchema } = require('../schemas/telegram_schema');
+const { linkTelegramSchema, telegramExistsSchema } = require('../schemas/telegram_schema');
 
 const router = express.Router();
 
@@ -11,6 +11,12 @@ router.post(
   passport.authenticate('jwt', { session: false }),
   validator(linkTelegramSchema),
   telegramCtrl.link,
+);
+
+router.get(
+  '/exists',
+  validator(telegramExistsSchema, 'query'),
+  telegramCtrl.exists,
 );
 
 module.exports = router;
