# server/services/telegram_service.js
@@ -12,4 +12,12 @@ async function linkChat({ chatId, userId, username, jwtToken }) {
   return session ? session.toJSON() : null;
 }
 
-module.exports = { linkChat };
+async function existsChat({ chatId, username }) {
+  const session = await models.TelegramSession.findOne({
+    where: { chatId, username },
+    attributes: ['chatId'],
+  });
+  return !!session;
+}
+
+module.exports = { linkChat, existsChat };
